long bigint comparisons

--- a/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
+++ b/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
@@ -2052,11 +2052,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Long vs BigInt comparisons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "compareIds_bigints =     [(1,       0.014),\n",
+    "                         (2,       0.040),\n",
+    "                         (4,       0.071),\n",
+    "                         (8,       0.210),\n",
+    "                        (16,       0.653),\n",
+    "                        (32,       2.001),\n",
+    "                        (64,       7.092),\n",
+    "                       (128,      28.495),\n",
+    "                       (256,     107.413),\n",
+    "                       (512,     903.671),\n",
+    "                      (1024,    1829.115),\n",
+    "                      (2048,    8545.522),\n",
+    "                      (4096,   26208.859),\n",
+    "                      (8192,  112118.290),\n",
+    "                     (16384,  410823.722)]\n",
+    "\n",
+    "\n",
+    "compareIds_longs      =  [(1,            0.015),\n",
+    "                         (2,            0.035),\n",
+    "                         (4,            0.051),\n",
+    "                         (8,            0.147),\n",
+    "                        (16,            0.565),\n",
+    "                        (32,            1.854),\n",
+    "                        (64,            6.663),\n",
+    "                       (128,           25.600),\n",
+    "                       (256,           99.617),\n",
+    "                       (512,          405.425),\n",
+    "                      (1024,         1957.608),\n",
+    "                      (2048,         8870.219),\n",
+    "                      (4096,        36224.172),\n",
+    "                      (8192,       158062.445),\n",
+    "                     (16384,       363872.421)]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data_comparison2(\n",
+    "  plot_title = \"Generated code lexing using Vectors\", \n",
+    "  data1 = zipper_lexer_data_vector,\n",
+    "  data1_label = \"Zipper Vector\",\n",
+    "  data2 = zipper_lexer_data_vector_mem,\n",
+    "  data2_label = \"Zipper Vector Memoised\",\n",
+    "  x_label = \"String length\",\n",
+    "  y_label = \"Time (us)\",\n",
+    "  log_scale = False)"
+   ]
   }
  ],
  "metadata": {
