new data, BETTER Hash function

--- a/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
+++ b/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
@@ -2055,12 +2055,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# With new Hashfunction"
+    "# With new Hashfunction with the 63 (non prime, see notion for details, on 02.09.2025)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
