--- a/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
+++ b/lexers/regex/verifiedlexer/benchmark_results/Regex_benchmark_results.ipynb
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -2743,6 +2743,91 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zipper: 0.6235633270321361, Silex: 0.6067599243856333\n",
+      "Zipper: 0.43005576559546316, Silex: 0.3217155009451796\n",
+      "Zipper: 0.3794549464398236, Silex: 0.22768431001890357\n",
+      "Zipper: 0.3441030245746692, Silex: 0.1733010396975425\n",
+      "Zipper: 0.34725897920604915, Silex: 0.15583629489603026\n",
+      "Zipper: 0.30127441713925646, Silex: 0.12924669187145557\n",
+      "Zipper: 0.2882233324331623, Silex: 0.11729840669727248\n",
+      "Zipper: 0.27515430056710777, Silex: 0.10946124763705105\n",
+      "Zipper: 0.26855786599453896, Silex: 0.09908149548414198\n",
+      "Zipper: 0.2568563327032136, Silex: 0.08999546313799622\n",
+      "Zipper: 0.2690225124591854, Silex: 0.08596855129747379\n",
+      "Zipper: 0.2666017643352237, Silex: 0.08103670447385004\n",
+      "Zipper: 0.2529746982695943, Silex: 0.07872778827977314\n",
+      "Zipper: 0.267536591952471, Silex: 0.07773399945989738\n",
+      "Zipper: 0.2439246376811594, Silex: 0.07147536231884058\n",
+      "Zipper: 0.26211046786389414, Silex: 0.06850649810964084\n",
+      "Zipper: 0.2665144000889581, Silex: 0.06703024574669188\n",
+      "Zipper: 0.25676034446544843, Silex: 0.06523566477630749\n",
+      "Zipper: 0.24901999801014826, Silex: 0.06442911153119092\n",
+      "Zipper: 0.25213478260869565, Silex: 0.06182722117202268\n",
+      "Zipper: 0.23979413088486812, Silex: 0.06123260419479701\n",
+      "Zipper: 0.24721979721601647, Silex: 0.060982385289568654\n",
+      "Zipper: 0.2562777184186735, Silex: 0.058114572203501275\n",
+      "Zipper: 0.25167454316320104, Silex: 0.05754552614996849\n",
+      "Zipper: 0.24179274102079393, Silex: 0.05666933837429112\n",
+      "Zipper: 0.2357050312636324, Silex: 0.05535982259706267\n",
+      "Zipper: 0.25502611496184274, Silex: 0.054855212490373166\n",
+      "Zipper: 0.2454802187415609, Silex: 0.05438327032136106\n",
+      "Zipper: 0.22819574995111142, Silex: 0.052916041979010495\n",
+      "Zipper: 0.22702986767485822, Silex: 0.052358601134215504\n",
+      "Zipper: 0.2269853039819501, Silex: 0.05158649917677907\n",
+      "Zipper: 0.2288305174858223, Silex: 0.050751004253308134\n",
+      "Zipper: 0.2228282064501346, Silex: 0.05319768574210918\n",
+      "Zipper: 0.22830401423329255, Silex: 0.04969643055709997\n",
+      "Zipper: 0.2272262489873076, Silex: 0.050342479071023495\n",
+      "Zipper: 0.23950882167611848, Silex: 0.0509343100189036\n",
+      "Zipper: 0.23147463342359373, Silex: 0.050888417718285395\n",
+      "Zipper: 0.24003198686697838, Silex: 0.050410108446920704\n",
+      "Zipper: 0.24566632737143132, Silex: 0.05023484077359314\n",
+      "Zipper: 0.24445500945179582, Silex: 0.04944650283553875\n",
+      "Zipper: 0.2250312139794366, Silex: 0.047118862095993364\n",
+      "Zipper: 0.22765847511027096, Silex: 0.05059712845440633\n",
+      "Zipper: 0.23648208554974282, Silex: 0.04919633358245043\n",
+      "Zipper: 0.25410684825571406, Silex: 0.04818658704244715\n",
+      "Zipper: 0.22450964083175803, Silex: 0.04474992648603234\n",
+      "Zipper: 0.24550583545656285, Silex: 0.04795101504068381\n",
+      "Zipper: 0.23776370510396977, Silex: 0.047966335518642156\n",
+      "Zipper: 0.23802126654064273, Silex: 0.04904332073093888\n",
+      "Zipper: 0.22485961189768913, Silex: 0.046968789784344746\n",
+      "Zipper: 0.24565383742911154, Silex: 0.04679240075614367\n",
+      "Zipper: 0.22320278735312649, Silex: 0.047370732792171695\n",
+      "Zipper: 0.22612076486840194, Silex: 0.044325868838156174\n",
+      "Zipper: 0.24189620858151728, Silex: 0.04552031244427007\n",
+      "Zipper: 0.24364814814814814, Silex: 0.046054995449135334\n",
+      "Zipper: 0.22013091596494241, Silex: 0.045730503522942084\n",
+      "Zipper: 0.22266267215770996, Silex: 0.04535241695922225\n",
+      "Zipper: 0.2377838026067058, Silex: 0.04338682718137499\n",
+      "Zipper: 0.2233833518023597, Silex: 0.04537895182843361\n",
+      "Zipper: 0.23797257377206754, Silex: 0.044679952580820866\n",
+      "Zipper: 0.25026644612476373, Silex: 0.04486713925645873\n",
+      "Zipper: 0.24759698162322974, Silex: 0.044786234466515855\n",
+      "Zipper: 0.2387046161351302, Silex: 0.044470425025916215\n",
+      "Zipper: 0.2203289825066763, Silex: 0.04452756023644493\n",
+      "Zipper: 0.21742471053875237, Silex: 0.044468425094517955\n",
+      "Zipper: 0.24646168387378214, Silex: 0.04198359749890941\n",
+      "Zipper: 0.24024488743770406, Silex: 0.044170934295698\n",
+      "Zipper: 0.21785057698276106, Silex: 0.04169297181389837\n",
+      "Zipper: 0.24577279550761705, Silex: 0.04421183142444123\n",
+      "Zipper: 0.220300347935673, Silex: 0.043648612366784474\n",
+      "Zipper: 0.23614115581960574, Silex: 0.04398390494193897\n",
+      "Zipper: 0.23386288239835995, Silex: 0.042697010037540936\n",
+      "Zipper: 0.24613069733249318, Silex: 0.04332435412728418\n",
+      "Zipper: 0.23608610197581376, Silex: 0.04331903047880468\n",
+      "Zipper: 0.2350302202012977, Silex: 0.042495580646809375\n",
+      "Zipper: 0.2244262633900441, Silex: 0.04331790800252048\n",
+      "Zipper: 0.2205159436871953, Silex: 0.042344468212118194\n",
+      "Zipper: 0.23710716126973214, Silex: 0.04338219625365183\n",
+      "Zipper: 0.24017924482574765, Silex: 0.042755246958460565\n",
+      "Zipper: 0.22158311598191, Silex: 0.03944382761838673\n"
+     ]
     }
    ],
    "source": [
@@ -2781,7 +2866,16 @@
     "  data3_label = \"Hash v3\",\n",
     "  x_label = \"String length\",\n",
     "  y_label = \"Time (us)\",\n",
-    "  log_scale = False)"
+    "  log_scale = False)\n",
+    "\n",
+    "\n",
+    "# time per character \n",
+    "zipper_lexer_data_vector_mem_hash_v3_per_char = [ t / l for (l,t) in zipper_lexer_data_vector_mem_hash_v3]\n",
+    "original_silex_lexer_data_per_char = [t / l for (l,t) in original_silex_lexer_data]\n",
+    "\n",
+    "comparison = list(zip(zipper_lexer_data_vector_mem_hash_v3_per_char, original_silex_lexer_data_per_char))\n",
+    "for (x,y) in comparison:\n",
+    "    print(f\"Zipper: {x}, Silex: {y}\")"
    ]
   },
   {
@@ -2903,6 +2997,13 @@
     "  y_label = \"Time (us)\",\n",
     "  log_scale = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
