--- a/lexers/regex/verifiedlexer/benchmark_results/Benchmark Data Analysis.ipynb
+++ b/lexers/regex/verifiedlexer/benchmark_results/Benchmark Data Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d5b4a342",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "10a5e27e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "361efa98",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "6e37ff6c",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "b9f6fb3b",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ee4a5cbd",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "PosixPath('plots/JSON_Manipulation_R-Path_sep_Non-Mem_vs_R-Path_sep_Mem_Pre-Filled_Cache_.pdf')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,28 +533,28 @@
     "\n",
     "plot2((benchRecombineWithoutWrapper, data3[benchRecombineWithoutWrapper]),\n",
     "      (benchRecombineSlices, data3[benchRecombineSlices]),\n",
-    "      title=\"JSON Manipulation: Recombining With vs Without Wrapper\",\n",
+    "      title=\"JSON Sorting: Recombining With vs Without Wrapper\",\n",
     "      pretty_data_labels=pretty_labels,\n",
     "      output_folder=\"plots\",\n",
     "      fmt=\"pdf\")\n",
     "\n",
     "plot_with_regression((benchLex, data3[benchLex]),\n",
     "                     degree=1,\n",
-    "                     title=\"JSON Manipulation: Lexing with Polynomial Regression (deg 1)\",\n",
+    "                     title=\"JSON Sorting: Lexing with Polynomial Regression (deg 1)\",\n",
     "                     output_folder=\"plots\",\n",
     "                     pretty_data_labels=pretty_labels,\n",
     "                     fmt=\"pdf\")\n",
     "\n",
     "plot_with_regression((benchSliceAndSort, data3[benchSliceAndSort]),\n",
     "                     degree=1,\n",
-    "                     title=\"JSON Manipulation: Slicing and Sorting with Polynomial Regression (deg 1)\",\n",
+    "                     title=\"JSON Sorting: Slicing and Sorting with Polynomial Regression (deg 1)\",\n",
     "                     output_folder=\"plots\",\n",
     "                     pretty_data_labels=pretty_labels,\n",
     "                     fmt=\"pdf\")\n",
     "\n",
     "plot2((benchLexAndCheckPrintable, data3[benchLexAndCheckPrintable]),\n",
     "      (benchLex, data3[benchLex]),\n",
-    "      title=\"JSON Manipulation: Lex & R-Path sep vs Lex Only (Mem)\",\n",
+    "      title=\"JSON Sorting: Lex & R-Path sep vs Lex Only (Mem)\",\n",
     "      pretty_data_labels=pretty_labels,\n",
     "      output_folder=\"plots\",\n",
     "      fmt=\"pdf\")\n",
@@ -562,7 +562,7 @@
     "plot2(\n",
     "      (benchLexNonMem, data3[benchLexNonMem]),\n",
     "      (benchLex, data3[benchLex]),\n",
-    "      title=\"JSON Manipulation: Lex Only (Mem vs Non-Mem)\",\n",
+    "      title=\"JSON Sorting: Lex Only (Mem vs Non-Mem)\",\n",
     "      pretty_data_labels=pretty_labels,\n",
     "      output_folder=\"plots\",\n",
     "      fmt=\"pdf\")\n",
@@ -570,7 +570,7 @@
     "plot2(\n",
     "      (benchCheckPrintableNonMem, data3[benchCheckPrintableNonMem]),\n",
     "      (benchCheckPrintable, data3[benchCheckPrintable]),\n",
-    "      title=\"JSON Manipulation: R-Path sep (Non-Mem) vs R-Path sep (Mem Pre-Filled Cache)\",\n",
+    "      title=\"JSON Sorting: sep (Non-Mem) vs sep (Mem Pre-Filled Cache)\",\n",
     "      pretty_data_labels=pretty_labels,\n",
     "      output_folder=\"plots\",\n",
     "      fmt=\"pdf\")\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f089bae4",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "PosixPath('plots/Regex_Email_Accepting_-_Zipper_List_vs_Vector_and_Memoization_Zipper_Vector_.eps')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "62baa44d",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
        "PosixPath('plots/Multi-line_Comments_Matching_Regex_List_with_Polynomial_Regression_deg_3_.pdf')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "85516df7",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "082cff3b",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1231,7 @@
        "PosixPath('plots/JSON_Lexing_CoqLex_vs_ZipLex_vs_OCamllex.pdf')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
