--- a/lexers/regex/verifiedlexer/benchmark_results/Benchmark Data Analysis.ipynb
+++ b/lexers/regex/verifiedlexer/benchmark_results/Benchmark Data Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 900,
+   "execution_count": 1,
    "id": "d5b4a342",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 901,
+   "execution_count": 2,
    "id": "10a5e27e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 902,
+   "execution_count": 3,
    "id": "361efa98",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 903,
+   "execution_count": 4,
    "id": "6e37ff6c",
    "metadata": {},
    "outputs": [],
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 904,
+   "execution_count": 5,
    "id": "ff828384",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 905,
+   "execution_count": 6,
    "id": "b9f6fb3b",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 906,
+   "execution_count": 7,
    "id": "ee4a5cbd",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
        "PosixPath('plots/JSON_Sorting_sep_Non-Mem_vs_sep_Mem_Pre-Filled_Cache_.pdf')"
       ]
      },
-     "execution_count": 906,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 907,
+   "execution_count": 8,
    "id": "f089bae4",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 908,
+   "execution_count": 9,
    "id": "62baa44d",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 909,
+   "execution_count": 10,
    "id": "85516df7",
    "metadata": {},
    "outputs": [
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 910,
+   "execution_count": 11,
    "id": "082cff3b",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 911,
+   "execution_count": 12,
    "id": "819850ce",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1796,7 @@
        " (100000, (24272529.604519997, 9745.789832934994))]"
       ]
      },
-     "execution_count": 911,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 13,
    "id": "cc5f8bd6",
    "metadata": {},
    "outputs": [
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 913,
+   "execution_count": 14,
    "id": "58bce4ca",
    "metadata": {},
    "outputs": [
@@ -2153,8 +2153,8 @@
     "    },\n",
     "    time_unit=\"s\",\n",
     "    convert_data_from_micro_sec=True,\n",
-    "    # output_folder=\"plots\",\n",
-    "    output_folder=None,\n",
+    "    output_folder=\"plots\",\n",
+    "    # output_folder=None,\n",
     "    fmt=\"pdf\",\n",
     "    fontsize=15,\n",
     "    shape_cycle= [\n",
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 914,
+   "execution_count": 15,
    "id": "36945db7",
    "metadata": {},
    "outputs": [
@@ -2420,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 915,
+   "execution_count": 16,
    "id": "7321f429",
    "metadata": {},
    "outputs": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 916,
+   "execution_count": 17,
    "id": "dd972782",
    "metadata": {},
    "outputs": [],
@@ -2541,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 917,
+   "execution_count": 18,
    "id": "c6180728",
    "metadata": {},
    "outputs": [
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 918,
+   "execution_count": 19,
    "id": "b1df95fb",
    "metadata": {},
    "outputs": [
